--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,9 @@
 *,
 ::before,
 ::after {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 #syhix {
     min-height: 100vh;
@@ -15,14 +15,22 @@
 }
 html {
     font-family: Marianne;
-    background: #140012; /*871F78*/
+    background: #140012;
+    /*871F78*/
 }
-
-
-
-@font-face {
-	font-family: Marianne;
-	src: url("/assets/fonts/Marianne-Bold.otf") format("opentype");
-	font-weight: bold;
-	font-display: swap;
+.nav-medias {
+    padding: 20px;
+    display: flex;
+    background-color: #3f3f3f;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    font-family: Marianne;
 }
+.fa-brands {font-size: 30px;}
+.fa-twitter {color: #1d9bf0;}
+.fa-youtube {color: #ff0000;}
+.fa-twitch {color: #9146ff;}
+.fa-instagram {color: #f56040;}
+.fa-github {color: #4078c0;}
+.fa-discord {color: #5865F2;}
